# cs244c-final-project

./: .gitignore  CMakeLists.txt  README.md  bridge.js  experiments.md  frontend.html  test.html
docs/: final_paper.md  latency_evaluation.md
eval/: README.md  eval_accept_to_commit.py  eval_cold_leader_election.py  eval_leader_crash_reelection.py  eval_submit_to_all_alive_followers_commit.py  eval_submit_to_leader_commit.py  eval_submit_to_majority_follower_commit.py
eval/eval_accept_to_commit/: accept_to_commit_samples.csv  accept_to_commit_samples_16,64,256,1024_3_round_robin.csv  accept_to_commit_summary.txt  accept_to_commit_summary_16,64,256,1024_3_round_robin.txt
eval/eval_submit_to_leader_commit/: submit_to_leader_commit_samples_256_3_round_robin.csv  submit_to_leader_commit_summary_256_3_round_robin.txt
include/: editor_server.hpp  interface.hpp  messsage.hpp  nos.hpp  paxos.hpp  paxos_tcp_transport.hpp  process_mode.hpp  runtime.hpp
src/: editor_server.cpp  interface.cpp  main.cpp  paxos.cpp  paxos_node_main.cpp  paxos_process.cpp  paxos_tcp_transport.cpp
tests/: test_paxos.cpp  test_paxos_tcp_three_nodes.sh  test_paxos_transport.cpp
